--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     -->
     <title>WaysHub</title>
   </head>
-  <body>
+  <body class="style">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="style">
 
